// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Node API for Android should spawn logcat process and emit entries when message filter is used 1`] = `
{
  "messages": [
    "No pno scan started",
  ],
  "pid": 935,
  "platform": "android",
  "priority": 4,
  "tag": "wificond",
  "ts": 1767225599000,
}
`;

exports[`Node API for Android should spawn logcat process and emit entries when message filter is used 2`] = `
{
  "messages": [
    "Scheduled scan is not running!",
  ],
  "pid": 935,
  "platform": "android",
  "priority": 2,
  "tag": "wificond",
  "ts": 1767225600000,
}
`;

exports[`Node API for Android should spawn logcat process and emit entries when no filter is used 1`] = `
{
  "messages": [
    "getDiskStats failed with result NOT_SUPPORTED and size 0",
  ],
  "pid": 934,
  "platform": "android",
  "priority": 5,
  "tag": "storaged",
  "ts": 1767225593000,
}
`;

exports[`Node API for Android should spawn logcat process and emit entries when no filter is used 2`] = `
{
  "messages": [
    "uid=1000(system) ActivityManager expire 10 lines",
  ],
  "pid": 1383,
  "platform": "android",
  "priority": 3,
  "tag": "chatty",
  "ts": 1767225594000,
}
`;

exports[`Node API for Android should spawn logcat process and emit entries when no filter is used 3`] = `
{
  "messages": [
    "No pno scan started",
  ],
  "pid": 935,
  "platform": "android",
  "priority": 4,
  "tag": "wificond",
  "ts": 1767225599000,
}
`;

exports[`Node API for Android should spawn logcat process and emit entries when tag filter is used 1`] = `
{
  "messages": [
    "getDiskStats failed with result NOT_SUPPORTED and size 0",
  ],
  "pid": 934,
  "platform": "android",
  "priority": 5,
  "tag": "storaged",
  "ts": 1767225593000,
}
`;

exports[`Node API for Android should spawn logcat process and emit entries when tag filter is used 2`] = `
{
  "messages": [
    "No pno scan started",
  ],
  "pid": 935,
  "platform": "android",
  "priority": 4,
  "tag": "wificond",
  "ts": 1767225599000,
}
`;

exports[`Node API for Android should spawn logcat process and emit entries when tag filter is used 3`] = `
{
  "messages": [
    "Scheduled scan is not running!",
  ],
  "pid": 935,
  "platform": "android",
  "priority": 2,
  "tag": "wificond",
  "ts": 1767225600000,
}
`;

exports[`Node API for iOS should spawn logging process and emit entires when message filter is used 1`] = `
{
  "category": "connection",
  "messages": [
    "nw_socket_handle_socket_event [C3103.1.1:2] Socket SO_ERROR [61: Connection refused]",
  ],
  "pid": 87578,
  "platform": "ios",
  "priority": 5,
  "processName": "example",
  "subsystem": "com.apple.network",
  "tag": "com.apple.network",
  "threadId": 154652000,
  "ts": 1750765489382,
}
`;

exports[`Node API for iOS should spawn logging process and emit entires when no filter is used 1`] = `
{
  "category": "Summary",
  "messages": [
    "Task <96F5582A-8C99-4035-AEC1-29C47714BAD5>.<2408> summary for task failure {transaction_duration_ms=12, response_status=-1, connection=2408, reused=1, reused_after_ms=0, request_start_ms=0, request_duration_ms=0, response_start_ms=0, response_duration_ms=0, request_bytes=0, request_throughput_kbps=0, response_bytes=0, response_throughput_kbps=0, cache_hit=false}",
  ],
  "pid": 87578,
  "platform": "ios",
  "priority": 3,
  "processName": "example",
  "subsystem": "com.apple.CFNetwork",
  "tag": "com.apple.CFNetwork",
  "threadId": 154653588,
  "ts": 1750764754176,
}
`;

exports[`Node API for iOS should spawn logging process and emit entires when no filter is used 2`] = `
{
  "category": "connection",
  "messages": [
    "[C2430 Hostname#65c1aeb9:63995 tcp, url: http://localhost:63995/, definite, attribution: developer] dealloc",
  ],
  "pid": 87578,
  "platform": "ios",
  "priority": 2,
  "processName": "example",
  "subsystem": "com.apple.network",
  "tag": "com.apple.network",
  "threadId": 154652000,
  "ts": 1750764777470,
}
`;

exports[`Node API for iOS should spawn logging process and emit entires when no filter is used 3`] = `
{
  "category": "connection",
  "messages": [
    "nw_socket_handle_socket_event [C3103.1.1:2] Socket SO_ERROR [61: Connection refused]",
  ],
  "pid": 87578,
  "platform": "ios",
  "priority": 5,
  "processName": "example",
  "subsystem": "com.apple.network",
  "tag": "com.apple.network",
  "threadId": 154652000,
  "ts": 1750765489382,
}
`;

exports[`Node API for iOS should spawn logging process and emit entires when no filter is used 4`] = `
{
  "category": "activity",
  "messages": [
    "No threshold for cfnetwork:foreground_task, returning NW_ACTIVITY_DURATION_INVALID",
  ],
  "pid": 87578,
  "platform": "ios",
  "priority": 1,
  "processName": "example",
  "subsystem": "com.apple.network",
  "tag": "com.apple.network",
  "threadId": 154652005,
  "ts": 1750764801817,
}
`;

exports[`Node API for iOS should spawn logging process and emit entires when tag filter is used 1`] = `
{
  "category": "connection",
  "messages": [
    "[C2430 Hostname#65c1aeb9:63995 tcp, url: http://localhost:63995/, definite, attribution: developer] dealloc",
  ],
  "pid": 87578,
  "platform": "ios",
  "priority": 2,
  "processName": "example",
  "subsystem": "com.apple.network",
  "tag": "com.apple.network",
  "threadId": 154652000,
  "ts": 1750764777470,
}
`;

exports[`Node API for iOS should spawn logging process and emit entires when tag filter is used 2`] = `
{
  "category": "connection",
  "messages": [
    "nw_socket_handle_socket_event [C3103.1.1:2] Socket SO_ERROR [61: Connection refused]",
  ],
  "pid": 87578,
  "platform": "ios",
  "priority": 5,
  "processName": "example",
  "subsystem": "com.apple.network",
  "tag": "com.apple.network",
  "threadId": 154652000,
  "ts": 1750765489382,
}
`;

exports[`Node API for iOS should spawn logging process and emit entires when tag filter is used 3`] = `
{
  "category": "connection",
  "messages": [
    "nw_socket_handle_socket_event [C3103.1.1:2] Socket SO_ERROR [61: Connection refused]",
  ],
  "pid": 87578,
  "platform": "ios",
  "priority": 5,
  "processName": "example",
  "subsystem": "com.apple.network",
  "tag": "com.apple.network",
  "threadId": 154652000,
  "ts": 1750765489382,
}
`;

exports[`Node API for iOS should spawn logging process and emit entires when tag filter is used 4`] = `
{
  "category": "activity",
  "messages": [
    "No threshold for cfnetwork:foreground_task, returning NW_ACTIVITY_DURATION_INVALID",
  ],
  "pid": 87578,
  "platform": "ios",
  "priority": 1,
  "processName": "example",
  "subsystem": "com.apple.network",
  "tag": "com.apple.network",
  "threadId": 154652005,
  "ts": 1750764801817,
}
`;
